# ng-i18n

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/core/: mod.rs  utils.rs
src/core/merger/: merger.rs
src/core/updater/: mod.rs  updater.rs  updater_error.rs
src/types/: args.rs  i18n_file.rs  mod.rs  translation_file.rs
